[project]
name = "learn-claude-code"
version = "0.1.0"
description = "Learn Claude Code -- Harness Engineering for Real Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false
